# kov

./: .gitattributes  .gitignore  BENCHMARKS.md  Cargo.toml  README.md  ROADMAP.md  SPEC.md
.github/workflows/: ci.yml
docs/: index.md
docs/content/: 01-getting-started.md  02-language.md  03-cli.md
docs/output/: index.html
editors/vscode/: extension.js  language-configuration.json  package.json
editors/vscode/syntaxes/: kov.tmLanguage.json
examples/: blink.elf  blink.kv  cat.kov  counter.kv  file_io.kov  hello_vfs.kov  io.kov  match_test.kov  pattern.kov  print_direct.kov  print_string.kov  read_file.kov  self_lex.kov  test_array_loop.kov  test_features.kov  test_import.kov  test_stdlib.kov  uart_hello.kov
self/: lexer.kov  tokenizer.kov
src/: build.rs  errors.rs  lib.rs  lsp.rs  main.rs  pkg.rs  testing.rs
src/codegen/: alloc.rs  arm.rs  builtins.rs  cheader.rs  compress.rs  crash.rs  defmt.rs  delta.rs  disasm.rs  elf.rs  elf64.rs  emit.rs  encode.rs  energy.rs  loopbound.rs  mmio.rs  mod.rs  stack.rs  startup.rs  svd.rs  wcet.rs  x86.rs  x86_codegen.rs
src/emu/: cpu.rs  memory.rs  mod.rs  vfs.rs
src/ir/: async_lower.rs  consteval.rs  globals.rs  lower.rs  mod.rs  opt.rs  types.rs
src/lexer/: mod.rs  token.rs
src/parser/: ast.rs  mod.rs  monomorph.rs
src/types/: check.rs  dma.rs  interrupt.rs  mod.rs
stdlib/: fixedvec.kov  flatmap.kov  fs.kov  gpio.kov  io.kv  mem.kov  str.kov  timer.kv  uart.kov  vec.kov
tests/: hardware_validation.rs
tools/kovdocs/: Cargo.toml
tools/kovdocs-kov/: main.kov  md.kov  template.kov
(+6 files in other folders)
