[package]
name = "kov"
description = "A systems language and compiler for RISC-V bare metal"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.85"

[lib]
name = "kovlib"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.114", optional = true }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[features]
wasm-bindgen = ["dep:wasm-bindgen"]
